--- a/TM.RestHour/Views/CrewList/CrewListNew.cshtml
+++ b/TM.RestHour/Views/CrewList/CrewListNew.cshtml
@@ -37,40 +37,80 @@
         @*@Html.Hidden("GetCrewBookedHours", @Url.Action("GetCrewBookedHours", "TimeSheet"))*@
         <!-- <div class="col-md-6" id="sideform">
 
-         @*<button type="button" class="button1" id="btnPrint" disabled="disabled">Print Report</button>*@
+            @*<button type="button" class="button1" id="btnPrint" disabled="disabled">Print Report</button>*@
 
-     </div>-->
-
-
+        </div>-->
 
 
-        <div class="card bac">
+        <div class="card bac" style=" height: 222px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <div>
+                        @using (Html.BeginForm("CrewListNew", "CrewList", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                        {
+                            <span style="font-size:20px;">Select File:</span>
+                            <br />
+                            <input type="file" name="postedFile" />
+                            @*<hr />*@
+                            <br />
+                            <input type="submit" value="Upload" class="button1" />
+                            <br /><br />
+                            <span style="color:green">@ViewBag.Message</span>
+                        }
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="box">
+                        <img src="~/background/excel.png" class="img-responsive" style="height:100%; width:100%;" />
+                    </div>
+                    <div class="export-template-label" style="display:inline-block;margin:4px 5px -8px 0px;">
+                        <a href="../../Import/IMOcrewlistForm5.xlsx" target="_self" download>
+                            <img src="#" alt="Download Excel" style="float:left;" class="button1">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <p style="color:blue; font-size:15px;">Important Instructions</p>
+            <p style="color:blue; font-size:12px;">* Data will not be inserted if there is no name</p>
+            <p style="color:blue; font-size:12px;">* If Rank,Country data does not match with any existing data in the system An new Rank and Country will be inserted</p>
+        </div>
+
+
+
+
+        <div class="card bac" style=" height: 500px;">
+            <div class="col-md-9">
+                <button type="button" class="button1" id="btnPrint" @*disabled="disabled"*@>Print Report</button>
+            </div>
+            <div class="col-md-3">
+                <button type="button" class="button1" onclick="location.href='@Url.Action("Index", "AddCrew")'">Add Crew</button>
+            </div>
             <div class="">
 
                 @*<div style="width:90%; margin:0 auto" class="tablecontainer">
-                    @Html.Hidden("loaddata", @Url.Action("LoadData", "CrewList"))
-                    @Html.Hidden("newurl", @Url.Action("Index", "AddCrew"))
-                    @Html.Hidden("newurl1", @Url.Action("UpdateInActive", "CrewList"))
-                    @Html.Hidden("crewlisturl", @Url.Action("CrewListNew", "CrewList"))
+                        @Html.Hidden("loaddata", @Url.Action("LoadData", "CrewList"))
+                        @Html.Hidden("newurl", @Url.Action("Index", "AddCrew"))
+                        @Html.Hidden("newurl1", @Url.Action("UpdateInActive", "CrewList"))
+                        @Html.Hidden("crewlisturl", @Url.Action("CrewListNew", "CrewList"))
 
 
-                    <input type="hidden" id="hdncount" />
+                        <input type="hidden" id="hdncount" />
 
-                    <input type="hidden" id="hdnrole" />
+                        <input type="hidden" id="hdnrole" />
 
 
-                    <table id="CrewListtable" class="display" style="width:100%">
-                        <thead>
-                            <tr>
-                                <th>Name</th>
-                                <th>RankName</th>
-                                <th>StartDate</th>
-                                <th>Edit</th>
-                                <th>Deactivate</th>
-                            </tr>
-                        </thead>
-                    </table>
-                </div>*@
+                        <table id="CrewListtable" class="display" style="width:100%">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>RankName</th>
+                                    <th>StartDate</th>
+                                    <th>Edit</th>
+                                    <th>Deactivate</th>
+                                </tr>
+                            </thead>
+                        </table>
+                    </div>*@
 
                 <div class="container" style="width:100%;">
                     <div class="row">
@@ -99,10 +139,13 @@
                                                     <thead>
                                                         <tr>
                                                             <th>Name</th>
-                                                            <th>RankName</th>
-                                                            <th>StartDate</th>
-                                                            <th>EndDate</th>
-                                                            <th>Edit</th>
+                                                            <th>Nationality</th>
+                                                            <th>Rank</th>
+                                                            <th>PassportOrSeaman</th>
+                                                            <th>Create Login</th>
+                                                            <th>Deactivate</th>
+                                                            <th>Deactivate</th>
+                                                            <th>Deactivate</th>
                                                             <th>Deactivate</th>
                                                         </tr>
                                                     </thead>
@@ -244,5 +287,49 @@
             });
         });
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+        function Popup2(data) {
+            var mywindow = window.open('', '', 'left=0,top=0,width=1600,height=1400');
+
+            var is_chrome = Boolean(mywindow.chrome);
+
+            mywindow.document.write('<html><head><title></title>');
+            mywindow.document.write('</head><body >');
+            mywindow.document.write($('#certtable_print').html());
+            mywindow.document.write('</body></html>');
+            mywindow.document.close(); // necessary for IE >= 10 and necessary before onload for chrome
+            is_chrome = false;
+            //alert(is_chrome);
+            if (is_chrome) {
+                mywindow.onload = function () { // wait until all resources loaded 
+                    mywindow.focus(); // necessary for IE >= 10
+                    mywindow.print();  // change window to mywindow
+                    mywindow.close();// change window to mywindow
+                };
+            }
+            else {
+                mywindow.document.close(); // necessary for IE >= 10
+                mywindow.focus(); // necessary for IE >= 10
+                mywindow.print();
+                mywindow.close();
+            }
+
+            return true;
+        }
+
     </script>
+
+
 }
