--- a/TM.RestHour/Views/PsychologicalEvaluation/BeckDepressionInventoryIIFinal.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/BeckDepressionInventoryIIFinal.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model TM.RestHour.Models.PsychologicalEvaluation
 @{
     ViewBag.Title = "BeckDepressionInventoryIIFinal";
 }
@@ -24,8 +24,15 @@
 
 
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
+<style>
+    tr.highlighted td {
+        background: red;
+    }
+</style>
+
 @*@Html.Hidden("Save_BeckDepressionInventoryIIFinal", @Url.Action("SaveForms", "PsychologicalEvaluation"))*@
 @Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
+@Html.Hidden("PsychologicalEvaluationForms", @Url.Action("PsychologicalEvaluationForms", "MentalHealth"))
 <form id="myForm1">
     <div class="row">
         @*<div class="head_title">
@@ -877,6 +884,10 @@
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
                     <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveBeck_Depression_Inventory_IIFinal', '4');">Save And Next</button>
+                    @if (Model.Mode == "redirect")
+                    {
+                        <button type="button" class="button1" id="btnBack">Back</button>
+                    }
                 </div>
 
             </div>
@@ -902,20 +913,23 @@
         $(document).ready(function () {
 
             //SetUpGrid();
-
+            $('#btnBack').click(function () {
+                var url = $('#PsychologicalEvaluationForms').val();
+                window.location.href = url;
+            });
         });
 
 
 
 
 
-        function printDiv(divName) {
-            var printContents = document.getElementById(divName).innerHTML;
-            w = window.open();
-            w.document.write(printContents);
-            w.print();
-            w.close();
-        }
+                //function printDiv(divName) {
+                //    var printContents = document.getElementById(divName).innerHTML;
+                //    w = window.open();
+                //    w.document.write(printContents);
+                //    w.print();
+                //    w.close();
+                //}
 
 
 
