--- a/TM.RestHour/Views/PsychologicalEvaluation/EmotionalIntelligenceQuizForLeadership.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/EmotionalIntelligenceQuizForLeadership.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model TM.RestHour.Models.PsychologicalEvaluation
 @{
     ViewBag.Title = "EmotionalIntelligenceQuizForLeadership";
 }
@@ -24,6 +24,12 @@
 
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
 @Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
+@Html.Hidden("PsychologicalEvaluationForms", @Url.Action("PsychologicalEvaluationForms", "MentalHealth"))
+<style>
+    tr.highlighted td {
+        background: red;
+    }
+</style>
 <form id="myForm1">
 
     <div class="row">
@@ -83,7 +89,7 @@
                             <col style="width:110px" />
                             <col style="width:544px" />
                         </colgroup>
-                        <tr style="height:13.9pt;">
+                        <tr style="height:13.9pt;"id="q1">
                             <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:83pt;vertical-align:top;">
                                 <p style="margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;">
                                     <span style="font-family:Calibri;font-size:11pt;">
@@ -923,6 +929,10 @@
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
                     <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSave321991584EmotionalIntelligenceQuizForLeadership', '9');">Save And Next</button>
+                    @if (Model.Mode == "redirect")
+                    {
+                        <button type="button" class="button1" id="btnBack">Back</button>
+                    }
                 </div>
 
             </div>
@@ -950,20 +960,23 @@
         $(document).ready(function () {
 
             //SetUpGrid();
-
+            $('#btnBack').click(function () {
+                var url = $('#PsychologicalEvaluationForms').val();
+                window.location.href = url;
+            });
         });
 
 
 
 
 
-        function printDiv(divName) {
-            var printContents = document.getElementById(divName).innerHTML;
-            w = window.open();
-            w.document.write(printContents);
-            w.print();
-            w.close();
-        }
+                //function printDiv(divName) {
+                //    var printContents = document.getElementById(divName).innerHTML;
+                //    w = window.open();
+                //    w.document.write(printContents);
+                //    w.print();
+                //    w.close();
+                //}
 
 
 
