--- a/TM.RestHour/Views/PsychologicalEvaluation/LocusOfControl.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/LocusOfControl.cshtml
@@ -1,7 +1,11 @@
-﻿
+﻿@model TM.RestHour.Models.PsychologicalEvaluation
 @{
     ViewBag.Title = "LocusOfControl";
 }
+
+<script src="~/Scripts/jquery-3.6.0.min.js"></script>
+<script src="~/Scripts/jquery-ui-1.13.0.min.js"></script>
+<link href="~/Content/jquery-ui.css" rel="stylesheet" />
 
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="../css/bootstrap.min.css" />
@@ -10,21 +14,21 @@
 <link rel="stylesheet" href="../css/style.css" />
 <link rel="stylesheet" href="../css/colors/default.css" id="colorSkinCSS">
 
-<link href="dist/dual-listbox.css" rel="stylesheet">
-
-<script src="~/Scripts/jquery-3.6.0.min.js"></script>
 <script src="~/Scripts/notify.min.js"></script>
 
 <script src="~/Scripts/toastr.min.js"></script>
 <link href="~/Content/toastr.min.css" rel="stylesheet" />
 
-<script src="~/Scripts/jquery-ui-1.13.0.min.js"></script>
-<link href="~/Content/jquery-ui.css" rel="stylesheet" />
-
-
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
 
 @Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
+@Html.Hidden("PsychologicalEvaluationForms", @Url.Action("PsychologicalEvaluationForms", "MentalHealth"))
+
+<style>
+    tr.highlighted td {
+        background: red;
+    }
+</style>
 
 <form id="myForm1">
     <div class="row">
@@ -36,8 +40,8 @@
             <div class="row">
 
 
-                <section id="print-content">
-                    <input type="button" onclick="printDiv('print-content')" value="print a div!" />
+                <section>
+
                     <p style="margin-left:6.75pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
                         <span style="font-family:Arial;font-size:15.5pt;">Locus of control questionnaire </span>
                     </p>
@@ -67,7 +71,7 @@
                                 </p>
                             </td>
                         </tr>
-                        <tr style="height:39pt; color:red;" id="q1">
+                        <tr style="height:39pt;" id="q1">
                             <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:341.5pt;vertical-align:top;">
                                 <p style="margin-left:6.300000000000001pt;text-indent:0.35000000000000003pt;margin-right:5.6000000000000005pt;line-height:95.83%;font-size:11.5pt;margin-top:0pt;margin-bottom:0pt;">
                                     <span style="font-family:Arial;font-size:11.5pt;">1. Is there some bad habit, such as smoking, that you would &nbsp; &nbsp; &nbsp; &nbsp;like to break but can’t?</span>
@@ -308,22 +312,22 @@
                             </td>
                         </tr>
                         @*<tr style="height:30.1pt;">
-            <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:341.5pt;vertical-align:top;">
-                <p style="margin-left:6.25pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;">
-                    <span style="font-family:Arial;font-size:15.5pt;">SCORE </span>
-                </p>
-            </td>
-            <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:75.4pt;vertical-align:top;">
-                <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
-                    <span>&nbsp;</span>
-                </p>
-            </td>
-            <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:67.45pt;vertical-align:top;">
-                <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
-                    <span>&nbsp;</span>
-                </p>
-            </td>
-        </tr>*@
+                                <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:341.5pt;vertical-align:top;">
+                                    <p style="margin-left:6.25pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;">
+                                        <span style="font-family:Arial;font-size:15.5pt;">SCORE </span>
+                                    </p>
+                                </td>
+                                <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:75.4pt;vertical-align:top;">
+                                    <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
+                                        <span>&nbsp;</span>
+                                    </p>
+                                </td>
+                                <td style="border-top:1pt solid #000000;border-bottom:1pt solid #000000;border-left:1pt solid #000000;border-right:1pt solid #000000;padding-left:5pt;padding-right:5pt;padding-top:5pt;padding-bottom:5pt;width:67.45pt;vertical-align:top;">
+                                    <p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:15.5pt;margin-top:0pt;margin-bottom:0pt;">
+                                        <span>&nbsp;</span>
+                                    </p>
+                                </td>
+                            </tr>*@
                     </table>
                     @*<p style="margin-left:0pt;margin-right:0pt;line-height:115%;font-size:11pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
                             <span>&nbsp;</span>
@@ -352,7 +356,11 @@
                 </section>
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveLocusOfControl', '1');">Save And Next</button>
+                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveLocusOfControl', '1', '@Session["LoggedInUserId"].ToString()');">Save And Next</button>
+                    @if (Model.Mode == "redirect")
+                    {
+                        <button type="button" class="button1" id="btnBack">Back</button>
+                    }
                 </div>
 
             </div>
@@ -381,19 +389,26 @@
 
             //SetUpGrid();
 
+            $('#btnBack').click(function () {
+                var url = $('#PsychologicalEvaluationForms').val();
+                window.location.href = url;
+            });
+
+
+
         });
 
+        
 
 
 
-
-        function printDiv(divName) {
-            var printContents = document.getElementById(divName).innerHTML;
-            w = window.open();
-            w.document.write(printContents);
-            w.print();
-            w.close();
-        }
+                //function printDiv(divName) {
+                //    var printContents = document.getElementById(divName).innerHTML;
+                //    w = window.open();
+                //    w.document.write(printContents);
+                //    w.print();
+                //    w.close();
+                //}
 
 
 
