--- a/TM.RestHour/Views/PsychologicalEvaluation/ROSENBERG_SELF_esteem_scale_final.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/ROSENBERG_SELF_esteem_scale_final.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model TM.RestHour.Models.PsychologicalEvaluation
 @{
     ViewBag.Title = "ROSENBERG_SELF_esteem_scale_final";
 }
@@ -25,6 +25,14 @@
 
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
 @Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
+@Html.Hidden("PsychologicalEvaluationForms", @Url.Action("PsychologicalEvaluationForms", "MentalHealth"))
+
+<style>
+    tr.highlighted td {
+        background: red;
+    }
+</style>
+
 <form id="myForm1">
 
     <div class="row">
@@ -780,6 +788,10 @@
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
                     <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveROSENBERG_SELF_Esteem_scale_final', '6');">Save And Next</button>
+                    @if (Model.Mode == "redirect")
+                    {
+                        <button type="button" class="button1" id="btnBack">Back</button>
+                    }
                 </div>
 
             </div>
@@ -806,20 +818,23 @@
         $(document).ready(function () {
 
             //SetUpGrid();
-
+            $('#btnBack').click(function () {
+                var url = $('#PsychologicalEvaluationForms').val();
+                window.location.href = url;
+            });
         });
 
 
 
 
 
-        function printDiv(divName) {
-            var printContents = document.getElementById(divName).innerHTML;
-            w = window.open();
-            w.document.write(printContents);
-            w.print();
-            w.close();
-        }
+                //function printDiv(divName) {
+                //    var printContents = document.getElementById(divName).innerHTML;
+                //    w = window.open();
+                //    w.document.write(printContents);
+                //    w.print();
+                //    w.close();
+                //}
 
 
 
