--- a/TM.RestHour/Views/Shared/_pvLocusOfControl.cshtml
+++ b/TM.RestHour/Views/Shared/_pvLocusOfControl.cshtml
@@ -301,7 +301,7 @@
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
                     <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveLocusOfControl', '1');">Save And Next</button>
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    @*<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>*@
                 </div>
                 
             </div>
